--- a/index.html
+++ b/index.html
@@ -2,6 +2,60 @@
 <html>
 <head>
     <title>My Simple Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 1rem 0;
+        }
+
+        nav {
+            background-color: #444;
+            display: flex;
+            justify-content: center;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+        }
+
+        nav li {
+            margin: 0;
+            padding: 1rem;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #fff;
+        }
+
+        main {
+            max-width: 800px;
+            margin: 2rem auto;
+            padding: 2rem;
+            background-color: #fff;
+            box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 5px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background-color: #444;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -18,11 +72,11 @@
 
     <main>
         <h2>About Me</h2>
-        <p>This is a simple website created using HTML.</p>
+        <p>This is a simple website created using HTML and CSS.</p>
     </main>
 
     <footer>
-        <p>&copy; 2023 My Simple Website</p>
+        <p>&copy; 2023 Veer Gosai</p>
     </footer>
 </body>
 </html>
