--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
             background-color: #444;
             color: #fff;
         }
+
+        .contact-section {
+            background-color: #f9f9f9;
+            padding: 2rem;
+            text-align: center;
+        }
+
+        .external-link-section {
+            background-color: #fff;
+            padding: 2rem;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -75,8 +87,20 @@
         <p>This is a simple website created using HTML and CSS.</p>
     </main>
 
+    <!-- Contact Section -->
+    <section class="contact-section">
+        <h2>Contact Me</h2>
+        <p>If you have any questions, feel free to email me at <a href="mailto:yourname@example.com">yourname@example.com</a>.</p>
+    </section>
+
+    <!-- External Link Section -->
+    <section class="external-link-section">
+        <h2>Check Out This Website</h2>
+        <p>Visit <a href="http://sapapers.co.za" target="_blank" rel="noopener noreferrer">sapapers.co.za</a> for more information.</p>
+    </section>
+
     <footer>
-        <p>&copy; 2023 Veer Gosai</p>
+        <p>&copy; 2023 My Simple Website</p>
     </footer>
 </body>
 </html>
