--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Simple Website</title>
+    <title>Hi, My Name Is Veer</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -84,23 +84,26 @@
 
     <main>
         <h2>About Me</h2>
-        <p>This is a simple website created using HTML and CSS.</p>
+        <p>I'm currently a South African student that wants to study Computer Science</p>
     </main>
 
     <!-- Contact Section -->
     <section class="contact-section">
         <h2>Contact Me</h2>
-        <p>If you have any questions, feel free to email me at <a href="mailto:yourname@example.com">yourname@example.com</a>.</p>
+        <p>If you have any questions, feel free to email me at <a href="mailto:contact@sapapers.co.za">contact@sapapers.co.za</a> (My Business Email)</p>
     </section>
 
     <!-- External Link Section -->
     <section class="external-link-section">
-        <h2>Check Out This Website</h2>
-        <p>Visit <a href="http://sapapers.co.za" target="_blank" rel="noopener noreferrer">sapapers.co.za</a> for more information.</p>
+        <h2>Check Out My Other Websites</h2>
+        <p><a href="http://sapapers.co.za" target="_blank" rel="noopener noreferrer">sapapers.co.za</a></p>
+        <p><a href="http://zambiapaper.co.zm" target="_blank" rel="noopener noreferrer">zambiapaper.co.zm</a></p>
+        <p><a href="http://rwandapaper.co.rw" target="_blank" rel="noopener noreferrer">rwandapaper.co.rw</a></p>
+        <p><a href="http://indiapapers.co.in" target="_blank" rel="noopener noreferrer">indiapapers.co.in</a></p>
     </section>
 
     <footer>
-        <p>&copy; 2023 My Simple Website</p>
+        <p>&copy; 2023 Veer Gosai</p>
     </footer>
 </body>
 </html>
