--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hi, My Name Is Veer</title>
+    <title>My Website</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,11 +67,27 @@
             padding: 2rem;
             text-align: center;
         }
+
+        /* New color styles */
+        h2 {
+            color: #333;
+            border-bottom: 2px solid #333;
+            padding-bottom: 0.5rem;
+        }
+
+        a {
+            color: #007bff;
+        }
+
+        a:hover {
+            color: #0056b3;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1 style="margin: 0;">Welcome to My Website</h1>
     </header>
 
     <nav>
@@ -84,13 +100,13 @@
 
     <main>
         <h2>About Me</h2>
-        <p>I'm currently a South African student that wants to study Computer Science</p>
+        <p>I'm currently a South African student who wants to study Computer Science.</p>
     </main>
 
     <!-- Contact Section -->
     <section class="contact-section">
         <h2>Contact Me</h2>
-        <p>If you have any questions, feel free to email me at <a href="mailto:contact@sapapers.co.za">contact@sapapers.co.za</a> (My Business Email)</p>
+        <p>If you have any questions, feel free to email me at <a href="mailto:contact@sapapers.co.za">contact@sapapers.co.za</a> (My Business Email).</p>
     </section>
 
     <!-- External Link Section -->
