--- a/index.html
+++ b/index.html
@@ -1,87 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Website</title>
+    <title>My Website - Home</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1rem 0;
-        }
-
-        nav {
-            background-color: #444;
-        }
-
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-        }
-
-        nav li {
-            margin: 0;
-            padding: 1rem;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #fff;
-        }
-
-        main {
-            max-width: 800px;
-            margin: 2rem auto;
-            padding: 2rem;
-            background-color: #fff;
-            box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 1rem;
-            background-color: #444;
-            color: #fff;
-        }
-
-        .contact-section {
-            background-color: #f9f9f9;
-            padding: 2rem;
-            text-align: center;
-        }
-
-        .external-link-section {
-            background-color: #fff;
-            padding: 2rem;
-            text-align: center;
-        }
-
-        /* New color styles */
-        h2 {
-            color: #333;
-            border-bottom: 2px solid #333;
-            padding-bottom: 0.5rem;
-        }
-
-        a {
-            color: #007bff;
-        }
-
-        a:hover {
-            color: #0056b3;
-            text-decoration: underline;
-        }
+        /* ... (your CSS styles) ... */
     </style>
 </head>
 <body>
@@ -91,31 +13,17 @@
 
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="other-websites.html">Other Websites</a></li>
         </ul>
     </nav>
 
     <main>
-        <h2>About Me</h2>
-        <p>I'm currently a South African student who wants to study Computer Science.</p>
+        <h2>Welcome to My Website</h2>
+        <p>This is the home page content.</p>
     </main>
-
-    <!-- Contact Section -->
-    <section class="contact-section">
-        <h2>Contact Me</h2>
-        <p>If you have any questions, feel free to email me at <a href="mailto:contact@sapapers.co.za">contact@sapapers.co.za</a> (My Business Email).</p>
-    </section>
-
-    <!-- External Link Section -->
-    <section class="external-link-section">
-        <h2>Check Out My Other Websites</h2>
-        <p><a href="http://sapapers.co.za" target="_blank" rel="noopener noreferrer">sapapers.co.za</a></p>
-        <p><a href="http://zambiapaper.co.zm" target="_blank" rel="noopener noreferrer">zambiapaper.co.zm</a></p>
-        <p><a href="http://rwandapaper.co.rw" target="_blank" rel="noopener noreferrer">rwandapaper.co.rw</a></p>
-        <p><a href="http://indiapapers.co.in" target="_blank" rel="noopener noreferrer">indiapapers.co.in</a></p>
-    </section>
 
     <footer>
         <p>&copy; 2023 Veer Gosai</p>
