--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 
     <main>
         <h2>Contact Me</h2>
-        <p>If you have any questions, feel free to email me at <a href="mailto:contact@sapapers.co.za">contact@sapapers.co.za</a> (My Business Email).</p>
+        <p>If you have any questions, feel free to email me at <a href="mailto:contact@sapapers.co.za">contact@sapapers.co.za</a> (My Business Email Address).</p>
     </main>
 
     <footer>
