--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
     <main>
         <h2>About Me</h2>
-        <p>I'm currently a South African student who wants to study Computer Science.</p>
+        <p>I'm Currently A South African student who wants to study Computer Science.</p>
     </main>
 
     <footer>
