--- a/other-websites.html
+++ b/other-websites.html
@@ -4,6 +4,92 @@
     <title>My Website - Other Websites</title>
     <style>
         /* ... (your CSS styles) ... */
+         /* Reset default margin and padding for body */
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        background-color: #f5f5f5;
+    }
+
+    /* Style for the header */
+    header {
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 1rem 0;
+    }
+
+    /* Style for navigation menu */
+    nav {
+        background-color: #444;
+    }
+
+    nav ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+    }
+
+    nav li {
+        margin: 0;
+        padding: 1rem;
+    }
+
+    nav a {
+        text-decoration: none;
+        color: #fff;
+    }
+
+    /* Style for main content */
+    main {
+        max-width: 800px;
+        margin: 2rem auto;
+        padding: 2rem;
+        background-color: #fff;
+        box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+        border-radius: 5px;
+    }
+
+    /* Style for footer */
+    footer {
+        text-align: center;
+        padding: 1rem;
+        background-color: #444;
+        color: #fff;
+    }
+
+    /* Style for contact section */
+    .contact-section {
+        background-color: #f9f9f9;
+        padding: 2rem;
+        text-align: center;
+    }
+
+    /* Style for external link section */
+    .external-link-section {
+        background-color: #fff;
+        padding: 2rem;
+        text-align: center;
+    }
+
+    /* New color styles */
+    h2 {
+        color: #333;
+        border-bottom: 2px solid #333;
+        padding-bottom: 0.5rem;
+    }
+
+    a {
+        color: #007bff;
+    }
+
+    a:hover {
+        color: #0056b3;
+        text-decoration: underline;
+    }
     </style>
 </head>
 <body>
