--- a/about.html
+++ b/about.html
@@ -108,7 +108,8 @@
 
     <main>
         <h2>About Me</h2>
-        <p>I'm Currently A South African student who wants to study Computer Science.</p>
+        <p>I'm Currently A South African student who wants to study Computer Science</p>
+        <img src="Flag.png" alt="South African Flag">
     </main>
 
     <footer>
